Friendlier logging. z-index fix for watcher count container.

--- a/ng_inspect_watchers.css
+++ b/ng_inspect_watchers.css
@@ -6,6 +6,7 @@
   position: absolute;
   top: 0;
   right: 0;
+  z-index: 9999;
   min-width: 20px;
   padding: 5px;
   background-color: red;
